# viewssld

./: .gitignore  Makefile.am  Vagrantfile  autogen.sh  configure.ac  configure.in  requirements.txt
doc/examples/: viewssld.conf
salt/roots/pillar/: data.sls
salt/roots/salt/: python.sls  top.sls  users.sls
src/: Makefile.am  utils.c  viewssld.c  viewssld.h
